--- a/shop-parent/shop-rest/pom.xml
+++ b/shop-parent/shop-rest/pom.xml
@@ -13,6 +13,12 @@
     <artifactId>shop-rest</artifactId>
 
     <dependencies>
+
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>com.shop</groupId>
             <artifactId>shop-manager-mapper</artifactId>
@@ -49,6 +55,16 @@
             <artifactId>jsp-api</artifactId>
             <scope>provided</scope>
         </dependency>
+
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+        </dependency>
+
     </dependencies>
 
 </project>
